style: Fix scrollbar's bakcground-color and border to improve theme change animation

--- a/src/app.css
+++ b/src/app.css
@@ -155,6 +155,7 @@ h6 {
 	--accent200-hover: var(--ocean-blue-dark);
 	/* black-coral */
 	--border: hsla(204, 13%, 37%, 0.2);
+	--border-hover: hsla(204, 13%, 37%, 0.4);
 }
 
 [data-mode='dark']:root {
@@ -168,6 +169,7 @@ h6 {
 	--accent200-hover: var(--middle-blue-light);
 	/* black-coral */
 	--border: hsla(204, 13%, 37%, 0.6);
+	--border-hover: hsla(204, 13%, 37%, 0.8);
 }
 
 /* 
@@ -178,30 +180,21 @@ h6 {
 	--size: 16px;
 	height: var(--size);
 	width: var(--size);
-	background-color: rgba(255, 255, 255, 0);
 }
 
 ::-webkit-scrollbar-track {
 	background-clip: padding-box;
-	background-color: var(--primary);
 }
 
 ::-webkit-scrollbar-thumb {
-	border: 4px solid var(--primary);
+	border: 4px solid transparent;
+	background-clip: padding-box;
 	border-radius: 16px;
-	background-color: hsla(204, 13%, 37%, 0.2);
+	background-color: var(--border);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background-color: hsla(204, 13%, 37%, 0.3);
-}
-
-[data-mode='dark'] ::-webkit-scrollbar-thumb {
-	background-color: hsla(204, 13%, 37%, 0.4);
-}
-
-[data-mode='dark'] ::-webkit-scrollbar-thumb:hover {
-	background-color: hsla(204, 13%, 37%, 0.5);
+	background-color: var(--border-hover);
 }
 
 /* 
